# cmake-arduino

./: .gitignore  BoardOptions.cmake  CMakeLists.txt  README.md
blink/: CMakeLists.txt  blink.cpp
sdcard-test/: CMakeLists.txt  main.cpp
